update api delete publisher and swagger, change content migrate file pulisher
